adjusted layout and added fillable form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>YouLookUp</title>
 </head>
 <body>
-    <Header class="container-fluid mt-3">
+    <Header class="container-fluid">
         <div class="row d-flex justify-content-space-between">
             <div class="col">
 <!--for spacing-->
@@ -28,5 +28,13 @@
             </div>
          </div>
     </Header>
+    <section>
+        <form>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1" class="text-light">Type Lyrics Here...</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+        </form>
+    </section>
 </body>
 </html>
