added button and some Javascript

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <!--for spacing-->
             </div>
             <div class="col d-flex justify-content-center">
-            <h1>YouLookUp</h1>
+            <h1 class="font-weight-bold">YouLookUp</h1>
             </div>
             <div class="col d-flex align-items-center justify-content-center">
-            <button type="button" class="btn btn-primary">Toggle dark/light</button>
+            <button type="button" class="btn btn-danger">Toggle dark/light</button>
             </div>
          </div>
     </Header>
@@ -32,7 +32,8 @@
         <form>
             <div class="form-group">
                 <label for="exampleFormControlTextarea1" class="text-light">Type Lyrics Here...</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea class="form-control" id="Lyrictextinput" rows="3"></textarea>
+                <button type="button" class="btn btn-danger mt-2" id="lyricSubmit">Submit</button>
               </div>
         </form>
     </section>
